--- a/index.html
+++ b/index.html
@@ -6,20 +6,39 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <style>
-/* 基本设置 */
-body, html {margin:0; padding:0; font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif; overflow-x:hidden; color:#333; transition: color 0.5s;}
+/* ---------------- 基本样式 ---------------- */
+body, html {
+  margin:0; padding:0;
+  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
+  color:#333;
+  overflow-x:hidden;
+  transition: color 0.5s;
+}
 body.dark { color:#eee; }
-#bgVideo {position:fixed; top:0; left:0; width:100%; height:100%; object-fit:cover; z-index:0; transition: filter 0.5s;}
+
+/* ---------------- 背景视频 ---------------- */
+#bgVideo {
+  position:fixed; top:0; left:0;
+  width:100%; height:100%;
+  object-fit:cover;
+  z-index:0;
+  transition: filter 0.5s;
+}
 body.dark #bgVideo { filter: brightness(40%) contrast(110%); }
 
-/* 粒子 */
-#particles {position:fixed; top:0; left:0; width:100%; height:100%; pointer-events:none; z-index:0;}
+/* ---------------- 粒子 ---------------- */
+#particles {
+  position:fixed; top:0; left:0;
+  width:100%; height:100%;
+  pointer-events:none;
+  z-index:0;
+}
 
-/* 苹果风格卡片 */
+/* ---------------- 苹果风格卡片 ---------------- */
 .card {
   background: rgba(255,255,255,0.6);
   backdrop-filter: blur(20px);
-  border-radius: 20px;
+  border-radius: 25px;
   box-shadow: 0 8px 30px rgba(0,0,0,0.1);
   padding:25px 20px;
   display:flex;
@@ -33,10 +52,19 @@ body.dark #bgVideo { filter: brightness(40%) contrast(110%); }
 body.dark .card { background: rgba(40,40,40,0.7); color:#eee; }
 
 .card .tags { margin-top:10px; text-align:center; }
-.card .tag { display:inline-block; background:linear-gradient(45deg,#5ac8fa,#007aff); color:white; padding:5px 10px; margin:3px; border-radius:15px; font-size:12px; transition:0.2s;}
+.card .tag {
+  display:inline-block;
+  background:linear-gradient(45deg,#5ac8fa,#007aff);
+  color:white;
+  padding:5px 10px;
+  margin:3px;
+  border-radius:15px;
+  font-size:12px;
+  transition:0.2s;
+}
 .card .tag:hover { transform:scale(1.1); }
 
-/* 头部 */
+/* ---------------- 头部 ---------------- */
 header { text-align:center; padding:60px 20px 20px; position:relative; z-index:1;}
 header img { width:140px; height:140px; border-radius:50%; border:4px solid rgba(255,255,255,0.8); margin-bottom:20px; transition:transform 0.3s;}
 header img:hover {transform:scale(1.1);}
@@ -44,49 +72,75 @@ header h1, header p { color: inherit; margin:0;}
 header h1{margin:10px 0; font-size:36px;}
 header p{font-size:18px; margin:5px 0;}
 
-/* 导航 */
-nav { margin-top:20px; background:rgba(255,255,255,0.2); padding:10px 0; position:sticky; top:0; z-index:5; border-radius:10px; transition:0.3s;}
+/* ---------------- 导航 ---------------- */
+nav { margin-top:20px; background:rgba(255,255,255,0.2); padding:10px 0; position:sticky; top:0; z-index:5; border-radius:20px; transition:0.3s;}
 nav.scrolled { background:rgba(0,0,0,0.5); box-shadow:0 4px 10px rgba(0,0,0,0.3);}
 nav a { margin:0 15px; text-decoration:none; font-weight:bold; transition:0.3s;}
 nav a.active { color:#ffeb3b;}
 nav a:hover { color:#ffeb3b; }
 
-/* 日夜切换 */
-#modeToggle { position:fixed; top:20px; right:20px; padding:8px 15px; background:linear-gradient(135deg,#5ac8fa,#007aff); color:white; border-radius:20px; cursor:pointer; z-index:10; transition:0.3s;}
+/* ---------------- 日夜切换 ---------------- */
+#modeToggle { position:fixed; top:20px; right:20px; padding:8px 15px; background:linear-gradient(135deg,#5ac8fa,#007aff); color:white; border-radius:25px; cursor:pointer; z-index:10; transition:0.3s;}
 #modeToggle:hover { background:linear-gradient(135deg,#007aff,#5ac8fa); }
 
-/* 返回顶部 */
-#toTopBtn { position:fixed; bottom:30px; right:30px; background:linear-gradient(135deg,#5ac8fa,#007aff); color:white; border:none; padding:12px 18px; border-radius:50px; cursor:pointer; font-size:16px; z-index:10; display:none; transition:0.3s;}
+/* ---------------- 返回顶部 ---------------- */
+#toTopBtn { position:fixed; bottom:30px; right:30px; background:linear-gradient(135deg,#5ac8fa,#007aff); color:white; border:none; padding:12px 18px; border-radius:25px; cursor:pointer; font-size:16px; z-index:10; display:none; transition:0.3s;}
 #toTopBtn:hover { background:linear-gradient(135deg,#007aff,#5ac8fa); }
 
-/* 联系我 */
+/* ---------------- 联系我 ---------------- */
 .contact .qr { display:flex; justify-content:center; margin-top:20px; }
-.contact .qr img { width:140px; height:140px; border-radius:15px; border:2px solid #ccc; cursor:pointer; transition:0.3s;}
+.contact .qr img { width:140px; height:140px; border-radius:25px; border:2px solid #ccc; cursor:pointer; transition:0.3s;}
 .contact .qr img:hover { transform:scale(1.1); }
 
-/* 弹窗 */
-#qrModal { display:none; position:fixed; z-index:10; left:0; top:0; width:100%; height:100%; background:rgba(255,255,255,0.3); backdrop-filter:blur(15px); justify-content:center; align-items:center; border-radius:20px;}
-#qrModal img { max-width:300px; border-radius:20px; border:3px solid #fff;}
+/* ---------------- 弹窗 ---------------- */
+#qrModal { display:none; position:fixed; z-index:10; left:0; top:0; width:100%; height:100%; background:rgba(255,255,255,0.3); backdrop-filter:blur(15px); justify-content:center; align-items:center; border-radius:25px;}
+#qrModal img { max-width:300px; border-radius:25px; border:3px solid #fff;}
 #qrModal.show { display:flex; }
 
-/* 分区 */
+/* ---------------- 分区 ---------------- */
 section { padding:60px 20px; text-align:center; position:relative; z-index:1; }
 section h2 { font-size:28px; color:#007aff; margin-bottom:30px; }
 
-textarea, input[type="date"] { width:90%; padding:10px; border-radius:12px; border:none; box-shadow: inset 0 2px 5px rgba(0,0,0,0.1); resize:none; margin:0 auto; display:block; text-align:left; }
+textarea, input[type="date"] {
+  width:90%;
+  padding:10px;
+  border-radius:20px;
+  border:none;
+  box-shadow: inset 0 2px 5px rgba(0,0,0,0.1);
+  resize:none;
+  margin:0 auto;
+  display:block;
+  text-align:left;
+}
 .diary-actions { display:flex; justify-content:center; gap:10px; margin-top:10px; }
-.diary-actions button, #addDiaryBtn { padding:8px 12px; cursor:pointer; border:none; border-radius:15px; background:linear-gradient(135deg,#5ac8fa,#007aff); color:white; font-weight:bold; transition:0.3s;}
+.diary-actions button, #addDiaryBtn {
+  padding:8px 12px;
+  cursor:pointer;
+  border:none;
+  border-radius:25px;
+  background:linear-gradient(135deg,#5ac8fa,#007aff);
+  color:white;
+  font-weight:bold;
+  transition:0.3s;
+}
 .diary-actions button:hover, #addDiaryBtn:hover { background:linear-gradient(135deg,#007aff,#5ac8fa); }
 
-/* 响应式 */
-@media(max-width:600px){ header img{width:100px;height:100px;} .card{width:90%;} nav a{margin:0 8px; font-size:14px;} }
+/* ---------------- 响应式 ---------------- */
+@media(max-width:600px){
+  header img{width:100px;height:100px;}
+  .card{width:90%;}
+  nav a{margin:0 8px; font-size:14px;}
+}
 </style>
 </head>
 <body>
 
+<!-- 背景视频 -->
 <video id="bgVideo" autoplay muted loop>
   <source src="https://github.com/Happyma-4869/Happyma-4869.github.io/blob/main/Video%20Project%204.mp4?raw=true" type="video/mp4">
 </video>
+
+<!-- 粒子 -->
 <canvas id="particles"></canvas>
 
 <header>
@@ -103,6 +157,7 @@ textarea, input[type="date"] { width:90%; padding:10px; border-radius:12px; bord
 <div id="modeToggle">🌙 日/夜切换</div>
 <button id="toTopBtn">⬆️ 顶部</button>
 
+<!-- 关于我 -->
 <section id="about">
   <h2>关于我</h2>
   <div class="card show">
@@ -116,6 +171,7 @@ textarea, input[type="date"] { width:90%; padding:10px; border-radius:12px; bord
   </div>
 </section>
 
+<!-- 日记 -->
 <section id="diary">
   <h2>我的日记 📖</h2>
   <div class="card">
@@ -126,6 +182,7 @@ textarea, input[type="date"] { width:90%; padding:10px; border-radius:12px; bord
   <div id="diaryList"></div>
 </section>
 
+<!-- 联系我 -->
 <section id="contact">
   <h2>联系我</h2>
   <p>微信：<strong>H4ppy_ma</strong></p>
@@ -191,6 +248,7 @@ modeToggle.addEventListener('click',()=>{
     particlesArray.forEach(p=>{
         p.color=document.body.classList.contains('dark') ? 'rgba(255,255,255,0.9)' : 'rgba(255,255,255,0.3)';
     });
+    initParticles();
 });
 
 // ---------------- 返回顶部 ----------------
@@ -219,7 +277,6 @@ class Particle {
     update(){
         this.x += this.speedX;
         this.y += this.speedY;
-        // 靠近鼠标趋势
         let dx = mouse.x - this.x;
         let dy = mouse.y - this.y;
         let dist = Math.sqrt(dx*dx + dy*dy);
@@ -252,9 +309,6 @@ function animateParticles(){
     requestAnimationFrame(animateParticles);
 }
 animateParticles();
-
-// 切换模式更新粒子数量
-modeToggle.addEventListener('click', initParticles);
 
 // ---------------- 微信二维码弹窗 ----------------
 const qrImg=document.getElementById('qrImg');
