--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 <meta charset="UTF-8">
 <title>Happy 的个人主页</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <style>
-/* ---------------- 基本样式 ---------------- */
 body, html {
   margin:0; padding:0;
   font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
@@ -16,7 +14,7 @@ body, html {
 }
 body.dark { color:#eee; }
 
-/* ---------------- 背景视频 ---------------- */
+/* 背景视频 */
 #bgVideo {
   position:fixed; top:0; left:0;
   width:100%; height:100%;
@@ -26,7 +24,7 @@ body.dark { color:#eee; }
 }
 body.dark #bgVideo { filter: brightness(40%) contrast(110%); }
 
-/* ---------------- 粒子 ---------------- */
+/* 粒子画布 */
 #particles {
   position:fixed; top:0; left:0;
   width:100%; height:100%;
@@ -34,7 +32,7 @@ body.dark #bgVideo { filter: brightness(40%) contrast(110%); }
   z-index:0;
 }
 
-/* ---------------- 苹果风格卡片 ---------------- */
+/* 苹果风格卡片 */
 .card {
   background: rgba(255,255,255,0.6);
   backdrop-filter: blur(20px);
@@ -64,7 +62,7 @@ body.dark .card { background: rgba(40,40,40,0.7); color:#eee; }
 }
 .card .tag:hover { transform:scale(1.1); }
 
-/* ---------------- 头部 ---------------- */
+/* 头部 */
 header { text-align:center; padding:60px 20px 20px; position:relative; z-index:1;}
 header img { width:140px; height:140px; border-radius:50%; border:4px solid rgba(255,255,255,0.8); margin-bottom:20px; transition:transform 0.3s;}
 header img:hover {transform:scale(1.1);}
@@ -72,60 +70,47 @@ header h1, header p { color: inherit; margin:0;}
 header h1{margin:10px 0; font-size:36px;}
 header p{font-size:18px; margin:5px 0;}
 
-/* ---------------- 导航 ---------------- */
+/* 导航 */
 nav { margin-top:20px; background:rgba(255,255,255,0.2); padding:10px 0; position:sticky; top:0; z-index:5; border-radius:20px; transition:0.3s;}
 nav.scrolled { background:rgba(0,0,0,0.5); box-shadow:0 4px 10px rgba(0,0,0,0.3);}
 nav a { margin:0 15px; text-decoration:none; font-weight:bold; transition:0.3s;}
 nav a.active { color:#ffeb3b;}
 nav a:hover { color:#ffeb3b; }
 
-/* ---------------- 日夜切换 ---------------- */
+/* 日夜切换按钮 */
 #modeToggle { position:fixed; top:20px; right:20px; padding:8px 15px; background:linear-gradient(135deg,#5ac8fa,#007aff); color:white; border-radius:25px; cursor:pointer; z-index:10; transition:0.3s;}
 #modeToggle:hover { background:linear-gradient(135deg,#007aff,#5ac8fa); }
 
-/* ---------------- 返回顶部 ---------------- */
+/* 返回顶部 */
 #toTopBtn { position:fixed; bottom:30px; right:30px; background:linear-gradient(135deg,#5ac8fa,#007aff); color:white; border:none; padding:12px 18px; border-radius:25px; cursor:pointer; font-size:16px; z-index:10; display:none; transition:0.3s;}
 #toTopBtn:hover { background:linear-gradient(135deg,#007aff,#5ac8fa); }
 
-/* ---------------- 联系我 ---------------- */
+/* 联系我 */
 .contact .qr { display:flex; justify-content:center; margin-top:20px; }
 .contact .qr img { width:140px; height:140px; border-radius:25px; border:2px solid #ccc; cursor:pointer; transition:0.3s;}
 .contact .qr img:hover { transform:scale(1.1); }
 
-/* ---------------- 弹窗 ---------------- */
+/* 弹窗 */
 #qrModal { display:none; position:fixed; z-index:10; left:0; top:0; width:100%; height:100%; background:rgba(255,255,255,0.3); backdrop-filter:blur(15px); justify-content:center; align-items:center; border-radius:25px;}
 #qrModal img { max-width:300px; border-radius:25px; border:3px solid #fff;}
 #qrModal.show { display:flex; }
 
-/* ---------------- 分区 ---------------- */
+/* 分区 */
 section { padding:60px 20px; text-align:center; position:relative; z-index:1; }
 section h2 { font-size:28px; color:#007aff; margin-bottom:30px; }
 
 textarea, input[type="date"] {
-  width:90%;
-  padding:10px;
-  border-radius:20px;
-  border:none;
-  box-shadow: inset 0 2px 5px rgba(0,0,0,0.1);
-  resize:none;
-  margin:0 auto;
-  display:block;
-  text-align:left;
+  width:90%; padding:10px; border-radius:20px; border:none; box-shadow: inset 0 2px 5px rgba(0,0,0,0.1);
+  resize:none; margin:0 auto; display:block; text-align:left;
 }
 .diary-actions { display:flex; justify-content:center; gap:10px; margin-top:10px; }
 .diary-actions button, #addDiaryBtn {
-  padding:8px 12px;
-  cursor:pointer;
-  border:none;
-  border-radius:25px;
-  background:linear-gradient(135deg,#5ac8fa,#007aff);
-  color:white;
-  font-weight:bold;
-  transition:0.3s;
+  padding:8px 12px; cursor:pointer; border:none; border-radius:25px;
+  background:linear-gradient(135deg,#5ac8fa,#007aff); color:white; font-weight:bold; transition:0.3s;
 }
 .diary-actions button:hover, #addDiaryBtn:hover { background:linear-gradient(135deg,#007aff,#5ac8fa); }
 
-/* ---------------- 响应式 ---------------- */
+/* 响应式 */
 @media(max-width:600px){
   header img{width:100px;height:100px;}
   .card{width:90%;}
@@ -135,12 +120,9 @@ textarea, input[type="date"] {
 </head>
 <body>
 
-<!-- 背景视频 -->
 <video id="bgVideo" autoplay muted loop>
   <source src="https://github.com/Happyma-4869/Happyma-4869.github.io/blob/main/Video%20Project%204.mp4?raw=true" type="video/mp4">
 </video>
-
-<!-- 粒子 -->
 <canvas id="particles"></canvas>
 
 <header>
@@ -157,7 +139,6 @@ textarea, input[type="date"] {
 <div id="modeToggle">🌙 日/夜切换</div>
 <button id="toTopBtn">⬆️ 顶部</button>
 
-<!-- 关于我 -->
 <section id="about">
   <h2>关于我</h2>
   <div class="card show">
@@ -171,7 +152,6 @@ textarea, input[type="date"] {
   </div>
 </section>
 
-<!-- 日记 -->
 <section id="diary">
   <h2>我的日记 📖</h2>
   <div class="card">
@@ -182,7 +162,6 @@ textarea, input[type="date"] {
   <div id="diaryList"></div>
 </section>
 
-<!-- 联系我 -->
 <section id="contact">
   <h2>联系我</h2>
   <p>微信：<strong>H4ppy_ma</strong></p>
@@ -197,16 +176,12 @@ textarea, input[type="date"] {
 <div id="qrModal"><img src="https://github.com/Happyma-4869/Happyma-4869.github.io/blob/main/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20251207233522_10_79.jpg?raw=true" alt="微信二维码大图"></div>
 
 <script>
-// ---------------- 日记功能 ----------------
+// ---------------- 日记 ----------------
 const diaryList=document.getElementById('diaryList');
 const addDiaryBtn=document.getElementById('addDiaryBtn');
 const diaryDate=document.getElementById('diaryDate');
 const diaryContent=document.getElementById('diaryContent');
-
-let diaries=JSON.parse(localStorage.getItem('diaries'))||[
-  {date:'2025-12-08', content:'今天是我初次创建我的个人网站  目前还在测试中  以后我会逐步完善耶✌'}
-];
-
+let diaries=JSON.parse(localStorage.getItem('diaries'))||[{date:'2025-12-08', content:'今天是我初次创建我的个人网站  目前还在测试中  以后我会逐步完善耶✌'}];
 function renderDiaries(){
   diaryList.innerHTML='';
   diaries.forEach((d,i)=>{
@@ -223,7 +198,6 @@ function renderDiaries(){
   localStorage.setItem('diaries', JSON.stringify(diaries));
 }
 renderDiaries();
-
 addDiaryBtn.addEventListener('click',()=>{
   const dateVal=diaryDate.value||new Date().toISOString().split('T')[0];
   const contentVal=diaryContent.value.trim();
@@ -232,7 +206,6 @@ addDiaryBtn.addEventListener('click',()=>{
   diaryDate.value=''; diaryContent.value='';
   renderDiaries();
 });
-
 function deleteDiary(i){ diaries.splice(i,1); renderDiaries(); }
 function editDiary(i){
   const newContent=prompt('请输入新的日记内容：', diaries[i].content);
@@ -246,7 +219,7 @@ const modeToggle=document.getElementById('modeToggle');
 modeToggle.addEventListener('click',()=>{
     document.body.classList.toggle('dark');
     particlesArray.forEach(p=>{
-        p.color=document.body.classList.contains('dark') ? 'rgba(255,255,255,0.9)' : 'rgba(255,255,255,0.3)';
+        p.color=document.body.classList.contains('dark')?'rgba(255,255,255,0.9)':'rgba(255,255,255,0.3)';
     });
     initParticles();
 });
@@ -257,56 +230,54 @@ window.addEventListener('scroll',()=>{ toTopBtn.style.display=(window.scrollY>20
 toTopBtn.addEventListener('click',()=>{ window.scrollTo({top:0, behavior:'smooth'}); });
 
 // ---------------- 粒子动画 ----------------
-const canvas = document.getElementById('particles');
-const ctx = canvas.getContext('2d');
-let particlesArray = [];
-
-function resizeCanvas() { canvas.width = window.innerWidth; canvas.height = window.innerHeight; }
+const canvas=document.getElementById('particles');
+const ctx=canvas.getContext('2d');
+let particlesArray=[];
+let mouse={x:null,y:null};
+window.addEventListener('mousemove', e=>{ mouse.x=e.x; mouse.y=e.y; });
+function resizeCanvas(){ canvas.width=window.innerWidth; canvas.height=window.innerHeight; }
 window.addEventListener('resize', resizeCanvas);
 resizeCanvas();
 
-class Particle {
-    constructor(){
-        this.x = Math.random()*canvas.width;
-        this.y = Math.random()*canvas.height;
-        this.size = Math.random()*2+1.5;
-        this.speedX = (Math.random()-0.5)*0.5;
-        this.speedY = (Math.random()-0.5)*0.5;
-        this.color = document.body.classList.contains('dark') ? 'rgba(255,255,255,0.9)' : 'rgba(255,255,255,0.3)';
-    }
-    update(){
-        this.x += this.speedX;
-        this.y += this.speedY;
-        let dx = mouse.x - this.x;
-        let dy = mouse.y - this.y;
-        let dist = Math.sqrt(dx*dx + dy*dy);
-        if(dist < 100){ this.x += dx*0.0015; this.y += dy*0.0015; }
-        if(this.y>canvas.height)this.y=0;
-        if(this.x>canvas.width)this.x=0;
-        if(this.x<0)this.x=canvas.width;
-        if(this.y<0)this.y=canvas.height;
-    }
-    draw(){
-        ctx.fillStyle = this.color;
-        ctx.beginPath();
-        ctx.arc(this.x,this.y,this.size,0,Math.PI*2);
-        ctx.fill();
-    }
+class Particle{
+  constructor(){
+    this.originX=Math.random()*canvas.width;
+    this.originY=Math.random()*canvas.height;
+    this.radius=Math.random()*2+1.5;
+    this.angle=Math.random()*Math.PI*2;
+    this.orbit=Math.random()*20+10;
+    this.speed=(Math.random()*0.01)+0.005;
+    this.color=document.body.classList.contains('dark')?'rgba(255,255,255,0.9)':'rgba(255,255,255,0.3)';
+  }
+  update(){
+    this.angle+=this.speed;
+    this.x=this.originX+Math.cos(this.angle)*this.orbit;
+    this.y=this.originY+Math.sin(this.angle)*this.orbit;
+    let dx=mouse.x-this.x, dy=mouse.y-this.y, dist=Math.sqrt(dx*dx+dy*dy);
+    if(dist<100){ this.x+=dx*0.002; this.y+=dy*0.002; }
+    if(this.x>canvas.width)this.originX=0;
+    if(this.x<0)this.originX=canvas.width;
+    if(this.y>canvas.height)this.originY=0;
+    if(this.y<0)this.originY=canvas.height;
+  }
+  draw(){
+    ctx.fillStyle=this.color;
+    ctx.beginPath();
+    ctx.arc(this.x,this.y,this.radius,0,Math.PI*2);
+    ctx.fill();
+  }
 }
 
-let mouse = {x:null, y:null};
-window.addEventListener('mousemove', e=>{ mouse.x=e.x; mouse.y=e.y; });
-
 function initParticles(){
-    particlesArray=[];
-    let count = document.body.classList.contains('dark') ? 150 : 80;
-    for(let i=0;i<count;i++){ particlesArray.push(new Particle()); }
+  particlesArray=[];
+  let count=document.body.classList.contains('dark')?150:80;
+  for(let i=0;i<count;i++){ particlesArray.push(new Particle()); }
 }
 initParticles();
 function animateParticles(){
-    ctx.clearRect(0,0,canvas.width,canvas.height);
-    particlesArray.forEach(p=>{p.update();p.draw();});
-    requestAnimationFrame(animateParticles);
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+  particlesArray.forEach(p=>{p.update();p.draw();});
+  requestAnimationFrame(animateParticles);
 }
 animateParticles();
 
